Bugs Squashed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -92,7 +92,7 @@ canvas {
 
 .list-group-item:nth-child(1) {
     color: white;
-    background-color: #f1b40099 !important;
+    background-color: rgb(255, 215, 0) !important;
     min-width: calc(100% + 20px);
     margin-left: -10px;
     webkit-box-shadow: 0px 7px 17px -1px rgba(0, 0, 0, 0.82);
@@ -102,7 +102,7 @@ canvas {
 
 .list-group-item:nth-child(2) {
     color: white;
-    background-color: #b5b8bc !important;
+    background-color: rgb(192, 192, 192) !important;
     min-width: calc(100% + 20px);
     margin-left: -10px;
     webkit-box-shadow: 0px 7px 17px -1px rgba(0, 0, 0, 0.82);
@@ -114,7 +114,7 @@ canvas {
     color: white;
     min-width: calc(100% + 20px);
     margin-left: -10px;
-    background-color: #79632199 !important;
+    background-color: rgb(205,127,50) !important;
     webkit-box-shadow: 0px 7px 17px -1px rgba(0, 0, 0, 0.82);
     -moz-box-shadow: 0px 7px 17px -1px rgba(0, 0, 0, 0.82);
     box-shadow: 0px 7px 17px -1px rgba(0, 0, 0, 0.82);
